--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^10.22.0",
     "@supabase/supabase-js": "^2.78.0",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
